# klarenz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
audio-core/: CMakeLists.txt
audio-core/src/: main.h
klarenz/: CHANGELOG.md  README.md  klarenz.cabal  package.yaml  stack.yaml
klarenz/app/: Main.hs
tinysynth/: .clang-tidy  CMakeLists.txt
tinysynth/src/: main.cpp
tinysynth/src/core/: GainModule.h  LLVMUGenBuilder.h  ModularSystem.cpp  ModularSystem.h  Module.h  SynthDef.h  SynthDefCompiler.cpp  SynthDefCompiler.h  UGen.cpp  UGen.h
tinysynth/src/modules/: AudioEngine.cpp  AudioEngine.h  Oscilator_LLVM.h  Oscillator.h  OscillatorParams.h  Phasor.h  TableOsc.cpp
tinysynth/src/utils/: Constants.h  InterpolationUtils.h  Utils.h
